Переработка html-содердания проекта

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <a class="btn btn-success" href="/login">Log in</a>
             {% endif %}&emsp;&emsp;</h1>
         <span class="navbar-text">
-      Mars One
+      Pybank
         </span>
     </nav>
     <h4 class="alert alert-light">И на Марсе будут яблони цвести!</h4>
