Возникли небольшие проблемы, из-за того что я тестировал шаблон, не запуская программу

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,19 +22,13 @@
 <body>
 <header>
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="#">Pybank</a>
+        <a class="navbar-brand" href="/">Pybank</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01"
                 aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="navbarsExample01" style="">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <form class="form-inline my-2 my-lg-0">
-                        <a href="/login" class="btn btn-outline-success my-2 my-sm-0" role="button"
-                           aria-pressed="true">Вход</a>
-                    </form>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/credits">Кредиты</a>
                 </li>
@@ -50,8 +44,8 @@
                         <a class="dropdown-item" href="/questions/other">Другое</a>
                     </div>
                 </li>
-
             </ul>
+            <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="button">Войти</a>
         </div>
     </nav>
 </header>
