--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
                 </li>
             </ul>
             <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="button">Войти</a>
+            <a href="/register" class="btn btn-outline-secondary my-2 my-sm-0" type="button">Регистрация</a>
         </div>
     </nav>
 </header>
