--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="register">Authorization</h1>
+<h1 class="register">Вход</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
@@ -12,7 +12,6 @@
         {{ error }}
     </div>
     {% endfor %}
-    </p>
     <p>
         {{ form.password.label }}<br>
         {{ form.password(class="form-control", type="password") }}<br>
@@ -21,7 +20,6 @@
         {{ error }}
     </div>
     {% endfor %}
-    </p>
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     <div>{{ message }}</div>
