--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,78 @@
 {% extends "base.html" %}
 {% block content %}
-<div align="center">
-    <h1>Works Log</h1>
-    {% if current_user.is_authenticated %}
-    <a class="btn btn-secondary" href="/addjob">Add job</a><br><br>
-    <a class="btn btn-secondary" href="/departments">To departments</a>
-    {% endif %}
-    {% for i in range(1, n + 1) %}
-    <h2 align="center">Action # {{i}}</h2>
-    <table border="1" width="800px" align="center">
-        <tr>
-            <td>
-                Title of activity
-            </td>
-            <td>
-                Team leader
-            </td>
-            <td>
-                Duration
-            </td>
-            <td>
-                List of collaborators
-            </td>
-            <td>
-                Hazard category
-            </td>
-            <td>
-                Is finished
-            </td>
-        </tr>
-        <tr>
-            {% for j in list_data[i - 1] %}
-            <td>
-                {{j}}
-            </td>
-            {% endfor %}
-        </tr>
-        {% if current_user.is_authenticated and (current_user == item[i - 1].user or current_user.id == 1) %}
-        <div align="center">
-            <a href="/jobs/{{ item[i - 1].id }}" class="btn btn-warning">Edit</a>
-            <a href="/jobs_delete/{{ item[i - 1].id }}" class="btn btn-danger">Delete</a>
+<div class="container">
+    <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic">{{main_news.header}}</h1>
+            <p class="lead my-3">{{main_news.preview}}</p>
+            <p class="lead mb-0"><a href="/news/{{main_news.id}}" class="text-white font-weight-bold">Читать
+                полностью...</a></p>
         </div>
-        <br>
-        {% endif %}
-    </table>
+    </div>
+    <div class="row mb-2">
+        <div class="col-md-6">
+            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-primary">{{news2.theme}}</strong>
+                    <h3 class="mb-0">{{news2.header}}</h3>
+                    <div class="mb-1 text-muted">{{news2.date}}</div>
+                    <p class="card-text mb-auto">{{news2.preview}}</p>
+                    <a href="/news/{{news2.id}}" class="stretched-link">Читать полностью...</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-success">{{news3.theme}}</strong>
+                    <h3 class="mb-0">{{news3.header}}</h3>
+                    <div class="mb-1 text-muted">{{news3.date}}</div>
+                    <p class="mb-auto">{{news3.preview}}</p>
+                    <a href="news/{{news3.id}}" class="stretched-link">Читать полностью...</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<br>
-{% endfor %}
+<main role="main" class="container">
+    <div class="row">
+        <div class="col-md-8 blog-main">
+            <h3 class="pb-4 mb-4 font-italic border-bottom">
+                From the Firehose
+            </h3>
+
+            <div class="blog-post">
+                <h2 class="blog-post-title">{{news4.header}}</h2>
+                <p class="blog-post-meta">{{news4.date}} by <a href="news4.author.id">{{news4.author + ' ' +
+                    news4.author.name}}</a></p>
+                <p>{{news4.content}}</p>
+            </div><!-- /.blog-post -->
+            <div class="blog-post">
+                <h2 class="blog-post-title">{{news5.header}}</h2>
+                <p class="blog-post-meta">{{news5.date}} by <a href="news5.author.id">{{news5.author + ' ' +
+                    news5.author.name}}</a></p>
+                <p>{{news4.content}}</p>
+            </div><!-- /.blog-post -->
+
+            <div class="blog-post">
+                <h2 class="blog-post-title">{{news6.header}}</h2>
+                <p class="blog-post-meta">{{news6.date}} by <a href="news6.author.id">{{news6.author + ' ' +
+                    news6.author.name}}</a></p>
+                <p>{{news4.content}}</p>
+            </div><!-- /.blog-post -->
+
+            <nav class="blog-pagination">
+                {% if page.id >= 1 %}
+                <a class="btn btn-outline-primary" href="/news/page/{{page.id - 1}}">{{page.id - 1}}</a>
+                {% endif %}
+                <a class="btn btn-outline-secondary disabled" href="#" tabindex="-2"
+                   aria-disabled="true">{{page.id}}</a>
+                {% if page.id < max_page_id %}
+                <a class="btn btn-outline-primary" href="/news/page/{{page.id + 1}}" tabindex="-1">{{page.id + 1}}</a>
+            </nav>
+
+        </div><!-- /.blog-main -->
+    </div><!-- /.row -->
+
+</main>
 {% endblock %}
