--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="/">Pybank</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         {% if current_user.is_authenticated %}
-        <a class="nav-link text-dark" href="/page/{{current_user.id}}">{{current_user.surname + ' ' +
+        <a class="nav-link text-dark" href="/users/{{current_user.id}}">{{current_user.surname + ' ' +
             current_user.name}}</a>
         {% endif %}
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01"
