--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,8 @@
     {% endfor %}
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    <div>{{ message }}</div>
+    {% if message %}
+    <div class="alert alert-warning" role="alert">{{ message }}</div>
+    {% endif %}
 </form>
 {% endblock %}
