--- a/templates/register.html
+++ b/templates/register.html
@@ -63,6 +63,8 @@
     {% endfor %}
     <p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
+    {% if message %}
+    <div class="alert alert-warning">{{message}}</div>
+    {% endif %}
 </form>
 {% endblock %}
