Добавил возмодность создавать возможности по ссылке

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,7 @@
                    aria-disabled="true">{{page.id}}</a>
                 {% if page.id < max_page_id %}
                 <a class="btn btn-outline-primary" href="/news/page/{{page.id + 1}}" tabindex="-1">{{page.id + 1}}</a>
+                {% endif %}
             </nav>
 
         </div><!-- /.blog-main -->
