Сделал в теории рабочую систему показа новостей, осталось провести тесты с работой шаблона index.html, обработать случаи показа следующих новостей

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-primary">{{news2.theme}}</strong>
                     <h3 class="mb-0">{{news2.header}}</h3>
                     <div class="mb-1 text-muted">{{news2.date}}</div>
                     <p class="card-text mb-auto">{{news2.preview}}</p>
@@ -24,7 +23,6 @@
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success">{{news3.theme}}</strong>
                     <h3 class="mb-0">{{news3.header}}</h3>
                     <div class="mb-1 text-muted">{{news3.date}}</div>
                     <p class="mb-auto">{{news3.preview}}</p>
@@ -38,7 +36,7 @@
     <div class="row">
         <div class="col-md-8 blog-main">
             <h3 class="pb-4 mb-4 font-italic border-bottom">
-                From the Firehose
+                Основные статьи
             </h3>
 
             <div class="blog-post">
