--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -21,8 +21,24 @@
         </div>
         {% endfor %}
     </div>
+    <div class="form-group">{{ form.theme.label }}<br>
+        {{ form.theme(class="form-control") }}<br>
+        {% for error in form.theme.errors %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+    <div class="form-group">{{ form.preview.label }}<br>
+        {{form.preview(class="form-control", rows="4")}}<br>
+        {% for error in form.preview.errors %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
     <div class="form-group">{{ form.text.label }}<br>
-        {{form.text(class="form-control", rows="6")}}<br>
+        {{form.text(class="form-control", rows="10")}}<br>
         {% for error in form.text.errors %}
         <div class="alert alert-danger" role="alert">
             {{ error }}
