Новости показываются осталось проверить выход за границы 6

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         <div class="navbar-collapse collapse" id="navbarsExample01" style="">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/0">Новости</a>
+                    <a class="nav-link" href="/news/page/0">Новости</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/credits">Кредиты</a>
