--- a/templates/index.html
+++ b/templates/index.html
@@ -34,39 +34,38 @@
 </div>
 <main role="main" class="container">
     <div class="row">
-        <div class="col-md-8 blog-main">
-            <h3 class="pb-4 mb-4 font-italic border-bottom">
+        <div class="col blog-main">
+            <h3 class="pb-4 mb-4 font-italic border-bottom" align="center">
                 Основные статьи
             </h3>
-
             <div class="blog-post">
-                <h2 class="blog-post-title">{{news4.header}}</h2>
-                <p class="blog-post-meta">{{news4.date}} by <a href="news4.author.id">{{news4.author + ' ' +
-                    news4.author.name}}</a></p>
+                <h2 class="blog-post-title" align="center">{{news4.header}}</h2>
+                <p class="blog-post-meta">{{news4.date}} by <a href="news4.author.id">{{news4.author_surname + ' ' +
+                    news4.author_name}}</a></p>
                 <p>{{news4.content}}</p>
             </div><!-- /.blog-post -->
             <div class="blog-post">
-                <h2 class="blog-post-title">{{news5.header}}</h2>
-                <p class="blog-post-meta">{{news5.date}} by <a href="news5.author.id">{{news5.author + ' ' +
-                    news5.author.name}}</a></p>
-                <p>{{news4.content}}</p>
+                <h2 class="blog-post-title" align="center">{{news5.header}}</h2>
+                <p class="blog-post-meta">{{news5.date}} by <a href="news5.author.id">{{news5.author_surname + ' ' +
+                    news5.author_name}}</a></p>
+                <p>{{news5.content}}</p>
             </div><!-- /.blog-post -->
 
             <div class="blog-post">
-                <h2 class="blog-post-title">{{news6.header}}</h2>
-                <p class="blog-post-meta">{{news6.date}} by <a href="news6.author.id">{{news6.author + ' ' +
-                    news6.author.name}}</a></p>
-                <p>{{news4.content}}</p>
+                <h2 class="blog-post-title" align="center">{{news6.header}}</h2>
+                <p class="blog-post-meta">{{news6.date}} by <a href="news6.author.id">{{news6.author_surname + ' ' +
+                    news6.author_name}}</a></p>
+                <p>{{news6.content}}</p>
             </div><!-- /.blog-post -->
 
             <nav class="blog-pagination">
                 {% if page.id >= 1 %}
-                <a class="btn btn-outline-primary" href="/news/page/{{page.id - 1}}">{{page.id - 1}}</a>
+                <a class="btn btn-outline-primary" href="/news/page/{{page.id - 1}}">{{page.id}}</a>
                 {% endif %}
                 <a class="btn btn-outline-secondary disabled" href="#" tabindex="-2"
-                   aria-disabled="true">{{page.id}}</a>
+                   aria-disabled="true">{{page.id + 1}}</a>
                 {% if page.id < max_page_id %}
-                <a class="btn btn-outline-primary" href="/news/page/{{page.id + 1}}" tabindex="-1">{{page.id + 1}}</a>
+                <a class="btn btn-outline-primary" href="/news/page/{{page.id + 1}}" tabindex="-1">{{page.id + 2}}</a>
                 {% endif %}
             </nav>
 
