--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-
 {% block content %}
-<h1 class="register">Добавление работы</h1>
+<h1 class="register">Добавление новости</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
+    {% if not current_user.is_authenticated %}
     <div class="form-group">{{ form.author.label }}<br>
         {{ form.author(class="form-control") }}<br>
         {% for error in form.author.errors %}
@@ -13,6 +13,7 @@
         </div>
         {% endfor %}
     </div>
+    {% endif %}
     <div class="form-group">{{ form.header.label }}<br>
         {{ form.header(class="form-control") }}<br>
         {% for error in form.header.errors %}
