--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
                 полностью...</a></p>
         </div>
     </div>
+    {% if news2.z %}
     <div class="row mb-2">
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -20,6 +21,7 @@
                 </div>
             </div>
         </div>
+        {% if news3.z %}
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
@@ -30,9 +32,12 @@
                 </div>
             </div>
         </div>
+        {% endif %}
     </div>
+    {% endif %}
 </div>
 <main role="main" class="container">
+    {% if news4.z %}
     <div class="row">
         <div class="col blog-main">
             <h3 class="pb-4 mb-4 font-italic border-bottom" align="center">
@@ -44,20 +49,22 @@
                     news4.author_name}}</a></p>
                 <p>{{news4.content}}</p>
             </div><!-- /.blog-post -->
+            {% if news5.z %}
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news5.header}}</h2>
                 <p class="blog-post-meta">{{news5.date}} by <a href="news5.author.id">{{news5.author_surname + ' ' +
                     news5.author_name}}</a></p>
                 <p>{{news5.content}}</p>
             </div><!-- /.blog-post -->
-
+            {% endif %}
+            {% if news6.z %}
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news6.header}}</h2>
                 <p class="blog-post-meta">{{news6.date}} by <a href="news6.author.id">{{news6.author_surname + ' ' +
                     news6.author_name}}</a></p>
                 <p>{{news6.content}}</p>
             </div><!-- /.blog-post -->
-
+            {% endif %}
             <nav class="blog-pagination">
                 {% if page.id >= 1 %}
                 <a class="btn btn-outline-primary" href="/news/page/{{page.id - 1}}">{{page.id}}</a>
@@ -68,9 +75,8 @@
                 <a class="btn btn-outline-primary" href="/news/page/{{page.id + 1}}" tabindex="-1">{{page.id + 2}}</a>
                 {% endif %}
             </nav>
-
         </div><!-- /.blog-main -->
     </div><!-- /.row -->
-
+    {% endif %}
 </main>
 {% endblock %}
