--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1 class="register">Добавление новости</h1>
-<form action="" method="post">
+<form action="" method="post" class="form">
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
     {% if not current_user.is_authenticated %}
