--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="register">Форма для регистрации</h1>
-<form action="" method="post">
+<form action="" method="post" class="form">
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
     <p>
