--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,11 @@
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
+            {% if current_user.position == 2 or current_user.position == 1 %}
+            <a href="/news/news_by_author/{{current_user.id}}/page/0" class="btn btn-outline-secondary my-2 my-sm-0"
+               type="button">Мои
+                статьи</a>
+            {% endif %}
             <a href="/logout" class="btn btn-outline-danger my-2 my-sm-0" type="button">Выйти</a>
             {% else %}
             <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="button">Войти</a>
