--- a/templates/show_news.html
+++ b/templates/show_news.html
@@ -10,5 +10,6 @@
         <h5 align="center">{{news.theme}}</h5>
         <p>{{news.content}}</p>
     </div>
+    <a class="btn btn-info my-2 my-sm-0" href="edit_news/{{news.id}}">Редактировать новость</a>
 </main>
 {% endblock %}
