--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,14 @@
             <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="button">Войти</a>
             <a href="/register" class="btn btn-outline-secondary my-2 my-sm-0" type="button">Регистрация</a>
             {% endif %}
+            {% if current_user.position == 2 or current_user.position == 1 %}
+            <a href="/news/add_news" class="btn btn-outline-info my-2 my-sm-0"
+               type="button">Написать новую статью</a>
+            {% endif %}
+            {% if current_user.position == 3 %}
+            <a href="/news/add_news" class="btn btn-warning my-2 my-sm-0"
+               type="button">Написать свою первую статью</a>
+            {% endif %}
         </div>
     </nav>
 </header>
