Изменил смысл проекта только на показ  новостей, изменил классы базы и news_resource.py Пришлось удалить всю базу

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,13 +34,16 @@
         <div class="navbar-collapse collapse" id="navbarsExample01" style="">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/page/0">Новости</a>
+                    <a class="nav-link" href="/news/page/0">Последние новости</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/credits">Кредиты</a>
+                    <a class="nav-link" href="/news/category/politic">Политика</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/holding">Вклады</a>
+                    <a class="nav-link" href="/news/category/health">Здоровье</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/news/category/technology">Технологии</a>
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
