Ешё по редактировал, настроил и протестировал добавление новостей и показ страницы

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 <body>
 <header>
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="/">Pybank</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <a class="navbar-brand" href="/">PyNews</a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         {% if current_user.is_authenticated %}
         <a class="nav-link text-dark" href="/users/{{current_user.id}}">{{current_user.surname + ' ' +
             current_user.name}}</a>
