--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -22,13 +22,18 @@
         </div>
         {% endfor %}
     </div>
-    <div class="form-group">{{ form.theme.label }}<br>
-        {{ form.theme(class="form-control") }}<br>
-        {% for error in form.theme.errors %}
-        <div class="alert alert-danger" role="alert">
-            {{ error }}
+    <div class="form-group">
+        <label>Выберете категории новости:</label><br>
+        <div class="form-check">
+            {{form.politic(class="form-check-input")}}
+            <label class="form-check-label">{{form.politic.label}}</label></div>
+        <div class="form-check">
+            {{form.technology(class="form-check-input")}}
+            <label class="form-check-label">{{form.technology.label}}</label></div>
+        <div class="form-check">
+            {{form.health(class="form-check-input")}}
+            <label class="form-check-label">{{form.health.label}}</label>
         </div>
-        {% endfor %}
     </div>
     <div class="form-group">{{ form.preview.label }}<br>
         {{form.preview(class="form-control", rows="4")}}<br>
