Добавил редактирование новостей

--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -61,6 +61,8 @@
         {% endfor %}
     </div>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
+    {% if message %}
+    <div class="alert alert-warning">{{message}}</div>
+    {% endif %}
 </form>
 {% endblock %}
