--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,13 @@
                     <a class="nav-link" href="/news/page/0">Последние новости</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/category/politic">Политика</a>
+                    <a class="nav-link text-success" href="/news/category/health/0">Здоровье</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/category/health">Здоровье</a>
+                    <a class="nav-link text-primary" href="/news/category/technology/0">Технологии</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/category/technology">Технологии</a>
+                    <a class="nav-link text-warning" href="/news/category/politic/0">Политика</a>
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
@@ -54,7 +54,7 @@
             {% endif %}
             <a href="/logout" class="btn btn-outline-danger my-2 my-sm-0" type="button">Выйти</a>
             {% else %}
-            <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="button">Войти</a>
+            <a href="/login" class="btn btn-outline-primary my-2 my-sm-0" type="button">Войти</a>
             <a href="/register" class="btn btn-outline-secondary my-2 my-sm-0" type="button">Регистрация</a>
             {% endif %}
             {% if current_user.position == 2 or current_user.position == 1 %}
