Проект почти закончен, осталась только тестировать и исправлять ошибки

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -133,7 +133,7 @@
                 {% if current_id != id %}
                 Самые новые статьи автора
                 {% else %}
-                Самые новые ваши статьи
+                Ваши самые новые статьи
                 {% endif %}
             </h3>
             <div class="blog-post">
