--- a/templates/show_news.html
+++ b/templates/show_news.html
@@ -9,16 +9,20 @@
             ' ' +
             news.author_name}}</a><br>
             {% if "health" in news.all_categories %}
-            <a href="/category/health/0"><strong class="d-inline-block mb-2 text-success">Здоровье</strong></a>&emsp;
+            <a href="category/health/0"><strong class="d-inline-block mb-2 text-success">Здоровье</strong></a>&emsp;
             {% endif %}
             {% if "technology" in news.all_categories %}
-            <a href="/category/technology/0"><strong class="d-inline-block mb-2 text-info">Технологии</strong></a>&emsp;
+            <a href="category/technology/0"><strong class="d-inline-block mb-2 text-info">Технологии</strong></a>&emsp;
             {% endif %}
             {% if "politic" in news.all_categories %}
-            <a href="/category/politic/0"><strong class="d-inline-block mb-2 text-warning">Политика</strong></a>
+            <a href="category/politic/0"><strong class="d-inline-block mb-2 text-warning">Политика</strong></a>
             {% endif %}</p>
         <p>{{news.content}}</p>
     </div>
+    {% if current_user.is_authenticated %}
+    {% if current_user.position == 1 or (current_user.position == 2 and news.author == current_user.id) %}
     <a class="btn btn-info my-2 my-sm-0" href="edit_news/{{news.id}}">Редактировать новость</a>
+    {% endif %}
+    {% endif %}
 </main>
 {% endblock %}
