--- a/templates/news_page.html
+++ b/templates/news_page.html
@@ -64,7 +64,7 @@
         <div class="col blog-main">
             {% if news4.z %}
             <h3 class="pb-4 mb-4 font-italic border-bottom" align="center">
-                Основные статьи
+                Статьи
             </h3>
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news4.header}}</h2>
