Добавил чуть-чуть красоты

--- a/templates/news_page.html
+++ b/templates/news_page.html
@@ -68,7 +68,7 @@
             </h3>
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news4.header}}</h2>
-                <p class="blog-post-meta">{{news4.date}} by <a href="/users/{{news4.author}}">{{news4.author_surname
+                <p class="blog-post-meta">{{news4.date}}, <a href="/users/{{news4.author}}">{{news4.author_surname
                     + ' ' +
                     news4.author_name}}</a></p>
                 <p>{{news4.content}}</p>
@@ -81,7 +81,7 @@
             {% if news5.z %}
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news5.header}}</h2>
-                <p class="blog-post-meta">{{news5.date}} by <a href="/users/{{news5.author}}">{{news5.author_surname
+                <p class="blog-post-meta">{{news5.date}}, <a href="/users/{{news5.author}}">{{news5.author_surname
                     + ' ' +
                     news5.author_name}}</a></p>
                 <p>{{news5.content}}</p>
@@ -95,7 +95,7 @@
             {% if news6.z %}
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news6.header}}</h2>
-                <p class="blog-post-meta">{{news6.date}} by <a href="/users/{{news6.author}}">{{news6.author_surname
+                <p class="blog-post-meta">{{news6.date}}, <a href="/users/{{news6.author}}">{{news6.author_surname
                     + ' ' +
                     news6.author_name}}</a></p>
                 <p>{{news6.content}}</p>
