--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -138,7 +138,7 @@
             </h3>
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news1.header}}</h2>
-                <p class="blog-post-meta">{{news1.date}} by <a href="{{news1.author}}">{{news1.author_surname
+                <p class="blog-post-meta">{{news1.date}}, <a href="{{news1.author}}">{{news1.author_surname
                     + '
                     ' +
                     news1.author_name}}</a></p>
@@ -152,7 +152,7 @@
             {% if news2.z %}
             <div class="blog-post">
                 <h2 class="blog-post-title" align="center">{{news2.header}}</h2>
-                <p class="blog-post-meta">{{news2.date}} by <a href="{{news2.author}}">{{news2.author_surname +
+                <p class="blog-post-meta">{{news2.date}}, <a href="{{news2.author}}">{{news2.author_surname +
                     '
                     ' +
                     news2.author_name}}</a></p>
