--- a/templates/delete_news.html
+++ b/templates/delete_news.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 class="register">Форма для регистрации</h1>
+<h1 class="register">Удаление новости</h1>
 <form action="" class="form" method="post">
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
