--- a/templates/show_news.html
+++ b/templates/show_news.html
@@ -4,7 +4,7 @@
     <br>
     <div class="blog-post jumbotron">
         <h2 class="blog-post-title" align="center">{{news.header}}</h2>
-        <p class="blog-post-meta">{{news.date}}, <a href="//users/{{news.author}}" class="text-secondary">{{news.author_surname
+        <p class="blog-post-meta">{{news.date}}, <a href="/users/{{news.author}}" class="text-secondary">{{news.author_surname
             +
             ' ' +
             news.author_name}}</a><br>
